tests/tests2/59_function_array.expect
59_function_array.c:1: error: declaration of an array of functions
