tests/tests2/59_function_array.c
int (*fct)[42](int x);
